--- a/config/database.yml
+++ b/config/database.yml
@@ -22,14 +22,14 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: myblog
+  database: myblog_test
   host: localhost
   username: postgres
   password: MyPassword
 
 production:
   <<: *default
-  database: myblog
+  database: myblog_Production
   host: localhost
   username: postgres
   password: <%= ENV['myblog_Password'] %>
