--- a/config/database.yml
+++ b/config/database.yml
@@ -12,10 +12,7 @@ default: &default
 
 development:
   <<: *default
-  database: myblog
-  host: localhost
-  username: postgres
-  password: MyPassword
+  database: myblog_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -23,14 +20,9 @@ development:
 test:
   <<: *default
   database: myblog_test
-  host: localhost
-  username: postgres
-  password: MyPassword
 
 production:
   <<: *default
   database: myblog_production
-  host: localhost
-  username: postgres
-  password: <%= ENV['myblog_Password'] %>
-  role: MyRole
+  username: myblog
+  password: <%= ENV['MYBLOG_DATABASE_PASSWORD'] %>
